fix/SWM-6: fix comments
